GPS Service w/time added, and minor tweaks in other places

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="empty"></string>
     <string name="yes">yes</string>
     <string name="no">no</string>
+    <string name="notification_text">The PLUGS queue service is running</string>
 </resources>
